Fixed padding about section on mobile.

--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ nav#nav-menu a:hover::after {
     justify-content: center;
     align-items: center;
     background-color: #54351e;
-    padding: clamp(50px, 10vw, 150px) clamp(16px, 5vw, 48px);
+    padding: clamp(130px, 10vw, 150px) clamp(16px, 5vw, 48px);
     flex-direction: column;
 }
 .about .container{
